# quantoniumos

./: .dockerignore  .env  .gitattributes  .gitignore  .gitignore.new  .pre-commit-config.yaml  ADVANCED_SIGNAL_PROCESSING.md  ARCHITECTURE_CONFUSION_ANALYSIS.md  ARCHITECTURE_VERIFICATION.md  BEGINNERS_GUIDE.md  BENCHMARK_PROTOCOL.md  BENCHMARK_REPORT.md  BULLETPROOF_BENCHMARK.py  CANONICAL.md  CHANGELOG.md  CITATION.cff  CLAIMS_AUDIT_REPORT.md  CLAIMS_PRACTICING_FILES.txt  CLEANUP_ACTION_PLAN.md  CLEANUP_COMMANDS.md  CLEANUP_LOG.md  CMakeLists.txt  CMakeLists_fixed.txt  CODEC_UPGRADE_SUMMARY.md  CODE_INVENTORY.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  COMPETITIVE_BENCHMARKS_ADDED.md  COMPETITIVE_BENCHMARK_RESULTS.md  COMPLETE_GEOMETRIC_WAVEFORM_CRYPTOSYSTEM.md  COMPONENT_INVENTORY.md  COMPREHENSIVE_CODEBASE_ANALYSIS.md  COMPREHENSIVE_PATENT_VALIDATION_REPORT.md  COMPREHENSIVE_REAL_PROJECT_SCAN.md  CONFIG_COMPREHENSIVE_AUDIT.md  CONTRIBUTING.md  CORE_COMPREHENSIVE_AUDIT.md  CPP_ENGINE_INTEGRATION_COMPLETE.md  CROSS_IMPLEMENTATION_STATUS.md  CRYPTO_TEST_RESULTS.md  (+571 more)
14_CONFIGURATION/build_configs/: CMakeLists.txt  MANIFEST.in  __init__.py  pyproject.toml  setup.py  temp_setup.py
algorithms/rft/kernels/: CMakeLists.txt  CONSOLIDATION_PLAN.md  Makefile  __init__.py  arft_kernel.py  operator_arft_kernel.py  phase_arft_kernel.py  quantonium_os.py  resonant_fourier_transform.py
quantoniumos/: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  FINAL_GATE_PROOF.md  FINAL_VALIDATION_PROOF.md  LICENSE  LICENSE_COMMERCIAL.md  QUANTONIUM_FFT_PERFORMANCE_VALIDATION.md  QUANTONIUM_FULL_ARCHITECTURE.md  QUANTONIUM_OS_DOCUMENTATION.md  QUANTONIUM_OS_ETHICAL_GUIDELINES.md  QUANTONIUM_SECURITY_IMPLEMENTATION.md  README.md  SECURITY.md  ULTIMATE_VALIDATION_PROOF.md  __init__.py  analyze_global_usage.py  benchmark_throughput.py  benchmark_throughput.py.bak  benchmark_throughput_report.json  build.ps1  build_cpp.bat  build_cpp.ps1  deployment_helper.py  enterprise_security.py  env_loader.py  env_loader_fixed.py  final_validation_proof.json  fix_all_gates.py  fix_embedded_headers.sh  fixed-encrypt.js  integrate_quantonium.py  launch_quantonium_os.py  main.py  models.py  prepare_for_deploy.py  pyproject.toml  qshll_task_manager.py  qt_app_example.py  (+21 more)
quantoniumos/.github/workflows/: green-wall-ci.yml  minimal-pipeline.yml  security-scan.yml
quantoniumos/api/: symbolic_interface.py
quantoniumos/apps/: bridge.py  config.py  geometric_container.py  wave_primitives.py
quantoniumos/attached_assets/: Pasted-Quantonium-OS-Quantum-Desktop-Environment-License-Academic-Research-Patent-Pending-A-cutting-e-1751998630630_1751998630631.txt  Pasted-Snapshot-of-the-remaining-blockers-Subsystem-Status-What-a-reviewer-will-say-SHA-256-benchmark-1-5-1751996214068_1751996214068.txt
quantoniumos/auth/: __init__.py  key_rotation_service.py  models.py
quantoniumos/backend/: stream.py
quantoniumos/backups/: resonance-encrypt.html.bak
quantoniumos/core/HPC/: ccp_engine.py  symbolic_eigen.py
quantoniumos/core/encryption/: geometric_waveform_hash.py
quantoniumos/docs/: DEVELOPMENT_SETUP.md  SECURITY_CODE_ANALYSIS.md  release_notes_0.3.0-rc1.md  security_hardening_phase2.md  security_hardening_phase3_fixes.md  security_hardening_phase5.md
quantoniumos/encryption/: __init__.py  geometric_container.py  wave_primitives.py
quantoniumos/logs/: benchmark_20250424-150514.csv  benchmark_20250424-151056.csv  benchmark_20250424-151242.csv  benchmark_20250424-163524.csv  benchmark_20250424-163748.csv  benchmark_20250424-163907.csv  benchmark_20250424-164031.csv  benchmark_20250424-164127.csv  benchmark_20250424-164610.csv  benchmark_20250424-174141.csv  benchmark_20250424-174908.csv  benchmark_20250424-213016.csv  benchmark_20250424-235420.csv  benchmark_20250425-124649.csv
quantoniumos/logs/security/: security.log.2025-04-26  security.log.2025-04-27  security.log.2025-04-29  security.log.2025-05-04  security.log.2025-05-05  security.log.2025-05-12  security.log.2025-05-15  security.log.2025-05-16  security.log.2025-05-17  security.log.2025-05-18  security.log.2025-05-21  security.log.2025-05-27  security.log.2025-05-29  security.log.2025-05-31  security.log.2025-06-02  security.log.2025-06-03  security.log.2025-06-05  security.log.2025-06-09  security.log.2025-06-11  security.log.2025-06-13  security.log.2025-06-15  security.log.2025-06-21  security.log.2025-06-22  security.log.2025-06-24  security.log.2025-06-27  security.log.2025-07-06  security.log.2025-07-07
quantoniumos/middleware/: README.md  __init__.py  input_validation.py  security_audit.py
quantoniumos/orchestration/: __init__.py  geometric_container.py  quantum_nova_system.py  resonance_manager.py  symbolic_projection_layer.py
quantoniumos/scripts/: comprehensive_pipeline_validator.py  drop_original_api_tables.sql  pentest.sh  release.sh  secure_api_tables.py  smoke_test.py  update_api_references.sql  validate_pipeline.py  verify_cli.py
quantoniumos/secure_core/: quantum_entanglement.py  quantum_scheduler.py
quantoniumos/secure_core/include/: engine_core.h
quantoniumos/secure_core/src/: engine_core.cpp  symbolic_eigenvector.cpp
quantoniumos/static/: 64-benchmark.html  circuit-designer.js  container-operations.html  embed-demo.html  launch_desktop.html  manifest.json  os.html  quantonium-widget.html  quantum-container.html  quantum-entropy.html  quantum-grid-tab.js  quantum-grid.html  quantum-grid.js  quantum-mail.html  quantum-rft.html  sw.js
quantoniumos/static/quantum_grid/: index.html  quantum-grid.js
quantoniumos/static/resonance_analyzer/: resonance-analyzer.js
quantoniumos/static/wave_ui/: wave_visualization.js
quantoniumos/tests/: test_geometric_vault.py  test_geowave_kat.py  test_key_management.py  test_stream.py  test_xor_avalanche.py
quantoniumos/utils/: __init__.py
resonance-core-rs/: Cargo.toml
resonance-core-rs/src/: lib.rs
src/rftmw_native/: CMakeLists.txt  README.md  rft_fused_kernel.hpp  rftmw.pc.in  rftmw_asm_kernels.hpp  rftmw_compression.hpp  rftmw_core.hpp  rftmw_python.cpp
(+4581 files in other folders)
