[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantoniumos"
version = "2.0.0"
authors = [
  { name="Mandcony", email="author@example.com" },
]
description = "A hybrid symbolic computing OS for quantum-inspired algorithms."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy==1.26.4",
    "scipy>=1.7.0,<1.13.0",
    "matplotlib==3.9.0",
    "pandas==2.2.2",
    "sympy==1.12",
    "qutip==4.7.6",
    "PyQt5",
    "qtawesome==1.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "black==24.4.2",
    "flake8==7.0.0",
    "jupyterlab==4.2.1",
    "hypothesis>=6.0.0",
]
ai = [
    "torch==2.3.0",
    "transformers==4.41.1",
    "datasets==2.19.1",
    "accelerate==0.30.1",
    "peft==0.11.1",
    "trl==0.9.4",
    "bitsandbytes==0.43.1",
    "wandb==0.17.0",
    "safetensors==0.4.3",
]
image = [
    "diffusers==0.27.2",
    "Pillow==11.3.0",
    "controlnet-aux==0.0.7",
    "xformers==0.0.26.post1",
]

[project.urls]
"Homepage" = "https://github.com/mandcony/quantoniumos"
"Bug Tracker" = "https://github.com/mandcony/quantoniumos/issues"

[tool.setuptools.packages.find]
where = ["."]
# Install only runtime packages; exclude tests and dev-only trees
include = [
  "algorithms*",
  "core*",
  "quantonium_os_src*",
  "tools/crypto*"
]
exclude = [
  "docs",
  "dev",
  "logs",
  "ai/inference",
  "tests*",
  "tools/development*",
  "tools/benchmarking*"
]

[tool.setuptools]
py-modules = ["quantonium_boot", "unitary_rft"]
