[metadata]
name = quantoniumos
version = 0.1.0
description = Quantum-resistant cryptographic operating system
long_description = file: README.md
long_description_content_type = text/markdown
author = Luis Minier
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
exclude =
    tests*
    docs*
    build*

[options.entry_points]
console_scripts =
    quantonium-validate = validate_production:main
